ranges API is now enabled if C++ standart is 17 or higher and not a clang family compiler is used

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,11 +86,13 @@ if (ONEDPL_USE_PARALLEL_POLICIES)
                     execute_process(COMMAND ${FIND_GXX_EXE} -dumpfullversion OUTPUT_VARIABLE _onedpl_gxx_version)
                     string(REPLACE "\." "0" _onedpl_gxx_version ${_onedpl_gxx_version})
                     target_compile_definitions(oneDPL INTERFACE TBB_USE_GLIBCXX_VERSION=${_onedpl_gxx_version})
-                    if (_onedpl_gxx_version GREATER_EQUAL 80100 AND CMAKE_CXX_STANDARD GREATER_EQUAL 17)
-                        set(ONEDPL_USE_RANGES_API ON)
-                    endif()
                 else()
                     target_compile_definitions(oneDPL INTERFACE TBB_USE_GLIBCXX_VERSION=70300)
+                endif()
+            endif()
+            if(CMAKE_CXX_STANDARD GREATER_EQUAL 17)
+                if(_onedpl_gxx_version AND _onedpl_gxx_version GREATER_EQUAL 80100 OR NOT _onedpl_gxx_version)
+                    set(ONEDPL_USE_RANGES_API ON)
                 endif()
             endif()
         endif()
