--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ if (ONEDPL_USE_PARALLEL_POLICIES)
         if (UNIX)
             if (CMAKE_CXX_COMPILER_ID STREQUAL Clang)
                 find_program(FIND_GXX_EXE g++)
+                set(CLANG_DETECT TRUE)
                 if (FIND_GXX_EXE)
                     execute_process(COMMAND ${FIND_GXX_EXE} -dumpfullversion OUTPUT_VARIABLE _onedpl_gxx_version)
                     string(REPLACE "\." "0" _onedpl_gxx_version ${_onedpl_gxx_version})
@@ -90,13 +91,10 @@ if (ONEDPL_USE_PARALLEL_POLICIES)
                     target_compile_definitions(oneDPL INTERFACE TBB_USE_GLIBCXX_VERSION=70300)
                 endif()
             endif()
-            if(CMAKE_CXX_STANDARD GREATER_EQUAL 17)
-                if(_onedpl_gxx_version AND _onedpl_gxx_version GREATER_EQUAL 80100 OR NOT _onedpl_gxx_version)
-                    set(ONEDPL_USE_RANGES_API ON)
-                endif()
-            endif()
         endif()
-
+        if(CMAKE_CXX_STANDARD GREATER_EQUAL 17 AND (_onedpl_gxx_version AND _onedpl_gxx_version GREATER_EQUAL 80100 OR NOT CLANG_DETECT))
+            set(ONEDPL_USE_RANGES_API ON)
+        endif()
         target_compile_definitions(oneDPL INTERFACE
             $<$<CONFIG:Debug>:TBB_USE_DEBUG=1>
             $<$<CONFIG:Debug>:PSTL_USE_DEBUG>
