--- a/.github/workflows/clang-format-pull-request.yml
+++ b/.github/workflows/clang-format-pull-request.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
     branches:
       - release_oneDPL
-      - master
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -18,9 +18,9 @@ jobs:
 
     - name: Applying clang-format for changed files
       run: |
-        URL="https://api.github.com/repos/${GITHUB_REPOSITORY}/pulls/${{ github.event.pull_request.number }}/files"
-        FILES=$(curl -s --request GET --get $URL |  jq -r '.[] | .filename' | grep ^include | grep -v nanorange\.hpp\$ || true)
-        echo $FILES | xargs -n1 -t -r clang-format-6.0 --style=file -i
+        MAIN_BRANCH_SHA=$(git merge-base main HEAD)
+        FILES=$(git diff --name-only $MAIN_BRANCH_SHA | grep ^include | grep -v nanorange\.hpp\$)
+        clang-format-6.0 -i -style=file $FILES
 
     - name: Creating diff
       run: git diff > clang-format-diff.diff
