--- a/.github/workflows/clang-format-pull-request.yml
+++ b/.github/workflows/clang-format-pull-request.yml
@@ -10,6 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
     - name: Get clang-format
       run: sudo apt-get install -yqq clang-format-6.0
