--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,11 +80,13 @@ if (ONEDPL_USE_PARALLEL_POLICIES)
 
         # It is for Clang and DPC++ compilers (while the last one is detected as Clang; for Linux only), which are used with libstdc++ standard library
         if (UNIX)
+            find_program(FIND_GXX_EXE g++)
+            if (FIND_GXX_EXE)
+                set(GXX_DETECT TRUE)
+                execute_process(COMMAND ${FIND_GXX_EXE} -dumpfullversion OUTPUT_VARIABLE _onedpl_gxx_version)
+            endif()
             if (CMAKE_CXX_COMPILER_ID STREQUAL Clang)
-                find_program(FIND_GXX_EXE g++)
-                set(CLANG_DETECT TRUE)
                 if (FIND_GXX_EXE)
-                    execute_process(COMMAND ${FIND_GXX_EXE} -dumpfullversion OUTPUT_VARIABLE _onedpl_gxx_version)
                     string(REPLACE "\." "0" _onedpl_gxx_version ${_onedpl_gxx_version})
                     target_compile_definitions(oneDPL INTERFACE TBB_USE_GLIBCXX_VERSION=${_onedpl_gxx_version})
                 else()
@@ -92,7 +94,7 @@ if (ONEDPL_USE_PARALLEL_POLICIES)
                 endif()
             endif()
         endif()
-        if(CMAKE_CXX_STANDARD GREATER_EQUAL 17 AND (_onedpl_gxx_version AND _onedpl_gxx_version GREATER_EQUAL 80100 OR NOT CLANG_DETECT))
+        if (CMAKE_CXX_STANDARD GREATER_EQUAL 17 AND (_onedpl_gxx_version AND _onedpl_gxx_version VERSION_GREATER_EQUAL 8.1 OR NOT GXX_DETECT))
             set(ONEDPL_USE_RANGES_API ON)
         endif()
 
