--- a/.github/workflows/clang-format-pull-request.yml
+++ b/.github/workflows/clang-format-pull-request.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Applying clang-format for changed files
       run: |
         FILES=$(git diff --name-only ${{ github.event.pull_request.base.sha }} | grep ^include | grep -v nanorange\.hpp\$ || true)
-        clang-format-6.0 -i -style=file $FILES
+        echo $FILES | xargs -n1 -t -r clang-format-6.0 --style=file -i
 
     - name: Creating diff
       run: git diff > clang-format-diff.diff
