CMake: fix -O0 key adding
Signed-off-by: Veprev, Alexey <alexey.veprev@intel.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,7 +69,7 @@ endif()
 if (MSVC)
     target_compile_options(oneDPL INTERFACE /Zc:__cplusplus /EHsc)
 else()
-    target_compile_options(oneDPL INTERFACE $<$<CONFIG:Debug>:-O0>)
+    set(CMAKE_CXX_FLAGS_DEBUG "-O0 ${CMAKE_CXX_FLAGS_DEBUG}")
 endif()
 
 if (ONEDPL_USE_PARALLEL_POLICIES)
