--- a/cmake/templates/oneDPLConfig.cmake.in
+++ b/cmake/templates/oneDPLConfig.cmake.in
@@ -16,7 +16,12 @@
 get_filename_component(_onedpl_root "${CMAKE_CURRENT_LIST_DIR}" REALPATH)
 get_filename_component(_onedpl_root "${_onedpl_root}/../../../" ABSOLUTE)
 
-get_filename_component(_onedpl_headers "${_onedpl_root}/include" ABSOLUTE)
+set(_onedpl_headers_subdir linux)
+if (WIN32)
+    set(_onedpl_headers_subdir windows)
+endif()
+
+get_filename_component(_onedpl_headers "${_onedpl_root}/${_onedpl_headers_subdir}/include" ABSOLUTE)
 
 if (EXISTS "${_onedpl_headers}")
     if (NOT TARGET oneDPL)
@@ -42,5 +47,5 @@ if (EXISTS "${_onedpl_headers}")
     endif()
 else()
     message(STATUS "oneDPL: headers do not exist ${_onedpl_headers}")
-    set(ONEDPL_FOUND FALSE)
+    set(oneDPL_FOUND FALSE)
 endif()
