Use append for INTERFACE_COMPILE_DEFINITIONS prop

--- a/cmake/templates/oneDPLConfig.cmake.in
+++ b/cmake/templates/oneDPLConfig.cmake.in
@@ -32,7 +32,7 @@ if (EXISTS "${_onedpl_headers}")
         find_package(TBB 2021 QUIET COMPONENTS tbb)
         if (NOT TBB_FOUND)
             message(STATUS "oneDPL: oneTBB is not found, set ONEDPL_USE_TBB_BACKEND=0")
-            set_target_properties(oneDPL PROPERTIES INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_TBB_BACKEND=0)
+            set_property(TARGET oneDPL APPEND PROPERTY INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_TBB_BACKEND=0)
         else()
             set_target_properties(oneDPL PROPERTIES INTERFACE_LINK_LIBRARIES TBB::tbb)
         endif()
@@ -42,7 +42,7 @@ if (EXISTS "${_onedpl_headers}")
         check_cxx_compiler_flag("-fsycl" _fsycl_option)
         if (NOT _fsycl_option)
             message(STATUS "oneDPL: -fsycl is not supported by current compiler, set ONEDPL_USE_DPCPP_BACKEND=0")
-            set_target_properties(oneDPL PROPERTIES INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_DPCPP_BACKEND=0)
+            set_property(TARGET oneDPL APPEND PROPERTY INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_DPCPP_BACKEND=0)
         endif()
     endif()
 else()
