--- a/cmake/templates/oneDPLConfig.cmake.in
+++ b/cmake/templates/oneDPLConfig.cmake.in
@@ -16,9 +16,10 @@
 get_filename_component(_onedpl_root "${CMAKE_CURRENT_LIST_DIR}" REALPATH)
 get_filename_component(_onedpl_root "${_onedpl_root}/../../../" ABSOLUTE)
 
-set(_onedpl_headers_subdir linux)
 if (WIN32)
     set(_onedpl_headers_subdir windows)
+else()
+    set(_onedpl_headers_subdir linux)
 endif()
 
 get_filename_component(_onedpl_headers "${_onedpl_root}/${_onedpl_headers_subdir}/include" ABSOLUTE)
