CMake: fix issues in oneDPLConfig.cmake.in (#86)
- Add subdirectory for headers
- Fix variable name to make REQUIRED key working
- Use append for INTERFACE_COMPILE_DEFINITIONS property

--- a/cmake/templates/oneDPLConfig.cmake.in
+++ b/cmake/templates/oneDPLConfig.cmake.in
@@ -16,7 +16,13 @@
 get_filename_component(_onedpl_root "${CMAKE_CURRENT_LIST_DIR}" REALPATH)
 get_filename_component(_onedpl_root "${_onedpl_root}/../../../" ABSOLUTE)
 
-get_filename_component(_onedpl_headers "${_onedpl_root}/include" ABSOLUTE)
+if (WIN32)
+    set(_onedpl_headers_subdir windows)
+else()
+    set(_onedpl_headers_subdir linux)
+endif()
+
+get_filename_component(_onedpl_headers "${_onedpl_root}/${_onedpl_headers_subdir}/include" ABSOLUTE)
 
 if (EXISTS "${_onedpl_headers}")
     if (NOT TARGET oneDPL)
@@ -27,7 +33,7 @@ if (EXISTS "${_onedpl_headers}")
         find_package(TBB 2021 QUIET COMPONENTS tbb)
         if (NOT TBB_FOUND)
             message(STATUS "oneDPL: oneTBB is not found, set ONEDPL_USE_TBB_BACKEND=0")
-            set_target_properties(oneDPL PROPERTIES INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_TBB_BACKEND=0)
+            set_property(TARGET oneDPL APPEND PROPERTY INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_TBB_BACKEND=0)
         else()
             set_target_properties(oneDPL PROPERTIES INTERFACE_LINK_LIBRARIES TBB::tbb)
         endif()
@@ -37,10 +43,10 @@ if (EXISTS "${_onedpl_headers}")
         check_cxx_compiler_flag("-fsycl" _fsycl_option)
         if (NOT _fsycl_option)
             message(STATUS "oneDPL: -fsycl is not supported by current compiler, set ONEDPL_USE_DPCPP_BACKEND=0")
-            set_target_properties(oneDPL PROPERTIES INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_DPCPP_BACKEND=0)
+            set_property(TARGET oneDPL APPEND PROPERTY INTERFACE_COMPILE_DEFINITIONS ONEDPL_USE_DPCPP_BACKEND=0)
         endif()
     endif()
 else()
     message(STATUS "oneDPL: headers do not exist ${_onedpl_headers}")
-    set(ONEDPL_FOUND FALSE)
+    set(oneDPL_FOUND FALSE)
 endif()
