cmake changes + kernel name for shift_left, shift_right algorithms

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,6 @@ if (FIND_GXX_EXE)
     execute_process(COMMAND ${FIND_GXX_EXE} -dumpfullversion OUTPUT_VARIABLE _onedpl_gxx_version)
 endif()
 
-option(ONEDPL_USE_UNNAMED_LAMBDA "Pass -fsycl-unnamed-lambda compile option" ON)
 option(ONEDPL_FPGA_STATIC_REPORT "Enable the static report generation for the FPGA device" OFF)
 option(ONEDPL_USE_AOT_COMPILATION "Enable the ahead of time compilation via OCLOC compiler" OFF)
 
@@ -149,12 +148,14 @@ if (ONEDPL_BACKEND MATCHES "^(tbb|dpcpp|dpcpp_only)$")
         target_compile_options(oneDPL INTERFACE
             $<$<OR:$<BOOL:${ONEDPL_USE_DEVICE_FPGA_HW}>,$<BOOL:${ONEDPL_USE_DEVICE_FPGA_EMU}>>:-fintelfpga>
             )
-        if(ONEDPL_USE_UNNAMED_LAMBDA)
-            message(STATUS "Use unnamed lambdas")
-            target_compile_options(oneDPL INTERFACE -fsycl-unnamed-lambda)
-        else()
-            message(STATUS "Don't use unnamed lambdas")
-            target_compile_options(oneDPL INTERFACE -fno-sycl-unnamed-lambda)
+        if (DEFINED ONEDPL_USE_UNNAMED_LAMBDA)
+            if(ONEDPL_USE_UNNAMED_LAMBDA)
+                message(STATUS "Use unnamed lambdas")
+                target_compile_options(oneDPL INTERFACE -fsycl-unnamed-lambda)
+            else()
+                message(STATUS "Don't use unnamed lambdas")
+                target_compile_options(oneDPL INTERFACE -fno-sycl-unnamed-lambda)
+            endif()
         endif()
 
         # DPC++ specific macro
