--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,14 @@ string(TOUPPER ${ONEDPL_BACKEND} ONEDPL_BACKEND)
 message(STATUS "Using parallel policies with ${ONEDPL_BACKEND} backend")
 string(TOLOWER ${ONEDPL_BACKEND} ONEDPL_BACKEND)
 
+# oneDPL test harness may initialize a C++ iterator using iterator with different type
+# that may break code when using icpc with -O3 optimizations on Linux
+if (UNIX)
+    if (CMAKE_CXX_COMPILER STREQUAL "icpc" AND CMAKE_BUILD_TYPE STREQUAL "Release")
+        target_compile_options(oneDPL INTERFACE -fno-strict-aliasing)
+    endif()
+endif()
+
 if (ONEDPL_ENABLE_SIMD)
     # TODO: remove skipping of Intel® oneAPI DPC++ Compiler once it can handle such options.
     if (NOT CMAKE_CXX_COMPILER MATCHES ".*dpcpp(-cl)?(.exe)?$")
