--- a/documentation/library_guide/Makefile
+++ b/documentation/library_guide/Makefile
@@ -33,3 +33,9 @@ html:
 	$(SPHINXBUILD) -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
 	@echo
 	@echo "Build finished. The HTML pages are in $(BUILDDIR)/html."
+
+ditaxml:
+	pip3 install --upgrade --force-reinstall git+https://gitlab.devtools.intel.com/document-publishing/sphinx2dita#egg=sphinx2dita 
+	$(SPHINXBUILD) -b ditaxml $(ALLSPHINXOPTS) $(BUILDDIR)/ditaxml
+	@echo
+	@echo "Build finished. The ditaxml files are in $(BUILDDIR)/ditaxml."
