--- a/examples/random/src/CMakeLists.txt
+++ b/examples/random/src/CMakeLists.txt
@@ -1,9 +1,5 @@
-if (NOT CMAKE_CXX_STANDARD)
-    set(CMAKE_CXX_STANDARD 14)
-endif()
-
 # Add an executable target from source files
-add_executable(${PROJECT_NAME} basic_example.cpp)
+add_executable(${PROJECT_NAME} main.cpp)
 
 # Specify compilation flags for the target
 target_compile_options(${PROJECT_NAME} PRIVATE -fsycl-unnamed-lambda)
