--- a/examples/random/CMakeLists.txt
+++ b/examples/random/CMakeLists.txt
@@ -1,3 +1,4 @@
+set(CMAKE_CXX_COMPILER "dpcpp")
 # Set default build type to RelWithDebInfo if not specified
 if (NOT CMAKE_BUILD_TYPE)
     message (STATUS "Default CMAKE_BUILD_TYPE not set using Release")
