--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,6 +159,17 @@ if (ONEDPL_BACKEND MATCHES "^(tbb|dpcpp|dpcpp_only)$")
                 "Select one of the following devices: CPU, GPU, FPGA_EMU or FPGA_HW")
         endif()
 
+        # check device backend
+        if (ONEDPL_DEVICE_BACKEND AND ONEDPL_DEVICE_BACKEND MATCHES "^(opencl|level_zero|\*?)$")
+            message(STATUS "Compilation using ${ONEDPL_DEVICE_BACKEND} device backend")
+        elseif(ONEDPL_DEVICE_BACKEND)
+            message(FATAL_ERROR "Unsupported device backend: ${ONEDPL_DEVICE_BACKEND}.\n"
+                "Select one of the following device backends: *, opencl or level_zero")
+        else()
+            set(ONEDPL_DEVICE_BACKEND "*")
+            message(STATUS "Use a default device backend")
+        endif()
+
         # Check correctness of STATIC_REPORT
         if (ONEDPL_FPGA_STATIC_REPORT)
             if (NOT ONEDPL_USE_DEVICE_FPGA_HW)
