--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -48,7 +48,7 @@ macro(onedpl_add_test test_source_file)
             set(SYCL_DEVICE_FILTER *:acc)
         else()
             string(TOLOWER ${ONEDPL_DEVICE_TYPE} ONEDPL_DEVICE_TYPE)
-            set(SYCL_DEVICE_FILTER  *:${ONEDPL_DEVICE_TYPE})
+            set(SYCL_DEVICE_FILTER ${ONEDPL_DEVICE_BACKEND}:${ONEDPL_DEVICE_TYPE})
         endif()
         set_tests_properties(${_test_name} PROPERTIES ENVIRONMENT SYCL_DEVICE_FILTER=${SYCL_DEVICE_FILTER})
     endif()
