--- a/examples/stable_sort_by_key/CMakeLists.txt
+++ b/examples/stable_sort_by_key/CMakeLists.txt
@@ -1,4 +1,7 @@
-set(CMAKE_CXX_COMPILER "dpcpp")
+if (NOT CMAKE_CXX_COMPILER)
+    set(CMAKE_CXX_COMPILER "dpcpp")
+endif()
+
 # Set default build type to RelWithDebInfo if not specified
 if (NOT CMAKE_BUILD_TYPE)
     message (STATUS "Default CMAKE_BUILD_TYPE not set using Release with Debug Info")
