--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -160,7 +160,7 @@ if (ONEDPL_BACKEND MATCHES "^(tbb|dpcpp|dpcpp_only)$")
         endif()
 
         # check device backend
-        if (ONEDPL_DEVICE_BACKEND AND ONEDPL_DEVICE_BACKEND MATCHES "^(opencl|level_zero)$")
+        if (ONEDPL_DEVICE_BACKEND MATCHES "^(opencl|level_zero)$")
             message(STATUS "Compilation using ${ONEDPL_DEVICE_BACKEND} device backend")
         elseif (DEFINED ONEDPL_DEVICE_BACKEND)
             message(FATAL_ERROR "Unsupported device backend: ${ONEDPL_DEVICE_BACKEND}.\n"
