--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -44,13 +44,13 @@ macro(onedpl_add_test test_source_file)
     add_test(NAME ${_test_name} COMMAND ${CMAKE_CURRENT_BINARY_DIR}/${_test_name})
     set_tests_properties(${_test_name} PROPERTIES SKIP_RETURN_CODE 77)
     if (ONEDPL_DEVICE_TYPE)
-        # TODO: Consider replacement of SYCL_DEVICE_TYPE with a new variable.
-        #       See for details: https://github.com/intel/llvm/blob/sycl/sycl/doc/EnvironmentVariables.md
-        set(SYCL_DEVICE_TYPE ${ONEDPL_DEVICE_TYPE})
         if (ONEDPL_DEVICE_TYPE MATCHES "FPGA")
-            set(SYCL_DEVICE_TYPE ACC)
+            set(SYCL_DEVICE_FILTER *:acc)
+        else()
+            string(TOLOWER ${ONEDPL_DEVICE_TYPE} ONEDPL_DEVICE_TYPE)
+            set(SYCL_DEVICE_FILTER ${ONEDPL_DEVICE_BACKEND}:${ONEDPL_DEVICE_TYPE})
         endif()
-        set_tests_properties(${_test_name} PROPERTIES ENVIRONMENT SYCL_DEVICE_TYPE=${SYCL_DEVICE_TYPE})
+        set_tests_properties(${_test_name} PROPERTIES ENVIRONMENT SYCL_DEVICE_FILTER=${SYCL_DEVICE_FILTER})
     endif()
 
     add_custom_target(run-${_test_name}
