--- a/examples/gamma_correction/src/CMakeLists.txt
+++ b/examples/gamma_correction/src/CMakeLists.txt
@@ -4,5 +4,10 @@ add_executable(${PROJECT_NAME} main.cpp)
 # Specify libraries to link with
 target_link_libraries(${PROJECT_NAME} tbb)
 
-# Add custom target for running
-add_custom_target(run ./${PROJECT_NAME})
+if(WIN32)
+  # Add custom target for running
+  add_custom_target(run ${PROJECT_NAME}.exe)
+else()
+  # Add custom target for running
+  add_custom_target(run ./${PROJECT_NAME})
+endif()
