--- a/examples/convex_hull/CMakeLists.txt
+++ b/examples/convex_hull/CMakeLists.txt
@@ -7,5 +7,5 @@ if (NOT CMAKE_BUILD_TYPE)
 endif()
 
 cmake_minimum_required (VERSION 3.0)
-project(stable_sort_by_key LANGUAGES CXX)
+project(convex_hull LANGUAGES CXX)
 add_subdirectory (src)
