+ support  "-fopenmp-simd" in the "make" files for dpcpp, clang, icpx

--- a/make/Makefile.common
+++ b/make/Makefile.common
@@ -91,7 +91,7 @@ ifneq (, $(filter $(compiler), clang clang++))
     include $(proj_root)/make/clang.inc
 endif
 
-ifneq (, $(filter $(compiler), icc icpc))
+ifneq (, $(filter $(compiler), icc icpc icpx))
     include $(proj_root)/make/icc.inc
 endif
 
