[pstl][host] make openMP back as default

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -75,7 +75,7 @@ jobs:
             cxx_compiler: g++
             std: 17
             build_type: release
-            backend: tbb
+            backend: omp
             device_type: HOST
     steps:
       - uses: actions/checkout@v2
