+ ubuntu-18.04 cfgs with OpenMP and TBBbackends

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,12 @@ jobs:
             build_type: release
             backend: omp
             device_type: HOST
+          - os: ubuntu-18.04
+            cxx_compiler: g++
+            std: 17
+            build_type: release
+            backend: tbb
+            device_type: HOST
     steps:
       - uses: actions/checkout@v2
       - name: Configure apt repositories
