Add one more configuration
Signed-off-by: Zheltov, Sergey1 <sergey1.zheltov@intel.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -165,6 +165,12 @@ jobs:
       matrix:
         include:
           - os: windows-2019
+            cxx_compiler: dpcpp
+            std: 17
+            build_type: release
+            backend: tbb
+            device_type: HOST
+          - os: windows-2019
             cxx_compiler: cl
             std: 17
             build_type: release
