Fix version printing
Signed-off-by: Zheltov, Sergey1 <sergey1.zheltov@intel.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,14 +140,16 @@ jobs:
         shell: bash
         run: |
           set -x
-          if [[ "${{ matrix.backend }}" == "dpcpp" ]]; then
+          sudo rm -rf /opt/intel/oneapi/dpl || true
+          source /opt/intel/oneapi/setvars.sh intel64 || true
+          if [[ "${{ matrix.cxx_compiler }}" == "dpcpp" ]]; then
             echo "::debug::$(dpcpp --version)"
+          fi
+          if [[ "${{ matrix.backend }}" == "dpcpp" ]]; then
             make_targets="sycl_iterator.pass"
             ctest_flags="-R sycl_iterator.pass"
             echo "::warning::dpcpp backend is set. Compile and run only sycl_iterator.pass"
           fi
-          sudo rm -rf /opt/intel/oneapi/dpl || true
-          source /opt/intel/oneapi/setvars.sh intel64 || true
           mkdir build && cd build
           cmake -DCMAKE_CXX_STANDARD=${{ matrix.std }} -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
             -DCMAKE_CXX_COMPILER=${{ matrix.cxx_compiler }} -DONEDPL_BACKEND=${{ matrix.backend }} -DONEDPL_DEVICE_TYPE=${{ matrix.device_type }} ..
@@ -196,16 +198,16 @@ jobs:
       - name: Run testing
         shell: cmd
         run: |
-          IF "${{ matrix.cxx_compiler }}" == "dpcpp" (
-            powershell $output = dpcpp --version; echo "::debug::$output"
-            set toolchain_option=-DCMAKE_TOOLCHAIN_FILE=../cmake/windows-dpcpp-toolchain.cmake
-          )
           IF "${{ matrix.backend }}" == "dpcpp" (
             set ninja_targets=sycl_iterator.pass
             set ctest_flags=-R sycl_iterator.pass
             echo ::warning::dpcpp backend is set. Compile and run only sycl_iterator.pass
           )
           call %CONDA%/condabin/conda.bat activate base
+          IF "${{ matrix.cxx_compiler }}" == "dpcpp" (
+            powershell $output = dpcpp --version; echo "::debug::$output"
+            set toolchain_option=-DCMAKE_TOOLCHAIN_FILE=../cmake/windows-dpcpp-toolchain.cmake
+          )
           mkdir build && cd build
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" x64
           set INCLUDE=%CONDA_PREFIX%\Library\include;%INCLUDE%
